GNOME Bugzilla – Bug 686894
error: 'GsdKeyboardManagerPrivate' has no member named 'session_is_fallback'
Last modified: 2012-10-26 06:28:27 UTC
While building gnome-settings-daemon 3.7.1, I face this build error: [ 267s] LC_ALL=C /usr/bin/intltool-merge -d -u -c ../../po/.intltool-merge-cache ../../po keyboard.gnome-settings-plugin.in keyboard.gnome-settings-plugin [ 267s] gsd-keyboard-manager.c: In function 'start_keyboard_idle_cb': [ 267s] gsd-keyboard-manager.c:1511:30: error: 'GsdKeyboardManagerPrivate' has no member named 'session_is_fallback' [ 267s] gsd-keyboard-manager.c:1514:30: error: 'GsdKeyboardManagerPrivate' has no member named 'session_is_fallback' [ 267s] make[3]: *** [gsd_test_keyboard-gsd-keyboard-manager.o] Error 1 [ 267s] make[3]: *** Waiting for unfinished jobs.... [ 267s] gsd-keyboard-manager.c: In function 'start_keyboard_idle_cb': [ 267s] gsd-keyboard-manager.c:1511:30: error: 'GsdKeyboardManagerPrivate' has no member named 'session_is_fallback' [ 267s] gsd-keyboard-manager.c:1514:30: error: 'GsdKeyboardManagerPrivate' has no member named 'session_is_fallback' Couldn't see any commits past 3.7.1 that would address it.
Created attachment 227324 [details] [review] keyboard: Fix build without IBus
commit 48c24a468e5c9d30791927de38cf301f843fcc2a Author: Bastien Nocera <hadess@hadess.net> Date: Fri Oct 26 08:22:00 2012 +0200 keyboard: Fix build without IBus https://bugzilla.gnome.org/show_bug.cgi?id=686894