keyboard: Fix build without IBus

https://bugzilla.gnome.org/show_bug.cgi?id=686894